# code-catalyst

./: .gitignore  CustomCodeExecutor.py  CustomGroupChat.py  MultiAgentSystem.py  README.md  SYS_MSG.py  agent_skills.py  agents.py  commands_data.json  hello.py  helper_functions.py  main.py  normal.py  playground.py  pyproject.toml  recovery_plan.json  requirements.txt  sys_msg_docker.py  sys_msg_normal.py  system_prompts.py  test.py  trial.py  trial2.py  utils.py
prompts/: prompt_manager.py
prompts/templates/: compose_agent.j2  docker_agent.j2  extract_info_agent.j2  sample_prompt.j2  team_intro.j2  template_agent.j2  tester_agent.j2
tests/: command_summary.py  failed_group_summary.py
tools/: ask_user.py
workflows/: docker.py  normal.py
