[project]
name = "code-catalyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "openai>=1.59.7",
    "packaging>=24.2",
    "phidata>=2.7.8",
    "prompt-toolkit>=3.0.50",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-frontmatter>=1.1.0",
    "questionary>=2.1.0",
    "rich>=13.9.4",
]
